$Id: History,v 1.16 2001-11-28 17:54:45 maire Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                    TestEm3 History file
                    --------------------
This file should be used by the G4 example coordinator to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
     
28-11-01  mma (testem3-V03-02-03) 
- EventAction: DrawTrack "none"
- small change in vis.mac
- suppression of the rndm commands, now managed by G4RunManager: 
  --> RunAction, RunActionMessenger, EventAction.
  
39-10-01  mma (testem3-V03-02-02)
-invert initialize and update in all macros (and TestEm3.in)
     
25-10-01  mma (testem3-V03-02-01)
- GetEnergyCuts() in PrintdEdx()
     
22-10-01  mma (testem3-V03-02-00)
- mods in TestEm3.cc: the initialisation and vis initialisation are
  not done by default. --> inserted /run/initialize in all macros.
- To get visualisation: > /control/execute vis.mac
- 80 columns everywhere.   
     
19-10-01  Steve O'Neale (examples-V03-02-00)
- Update reference output

31-05-01  mma (testem3-V03-01-01)
- VisManager
     
30-05-01  mma
- in RunAction: method PrintDedxTables() : binning as Geant3,
  printout ready to be read as ffread data cards.
- Geant3 application in geant3/g4mat to read the above data cards,
  in order to compare G3 and G4 dE/dx tables (see README).   

13-04-01  mma (testem3-V03-01-00)
- In PrimaryGeneratorAction, possibility to randomize the beam spot
- command /gun/rndm in PrimaryGeneratorMessenger
- similar functionality in geant3: gukine.F
     
12-04-01  mma