@@ -1,0 +1,33 @@
+# $Id: exo3q1.mac,v 1.1 2002-02-14 14:20:45 maire Exp $
+#
+# Macro file for "TestEm3.cc" 
+#
+# Aluminium 1 layer;
+#
+/control/verbose 2
+#
+/run/particle/setCut 2 cm
+/run/initialize
+#
+/calor/setNbOfLayers 1
+/calor/setNbOfAbsor 1
+/calor/setAbsor 0 Aluminium 10 cm
+/calor/setSizeYZ 10 cm
+/calor/setField 5 tesla
+/calor/update
+#
+/gun/setDefault
+#
+/control/execute vis.mac
+#
+/process/list
+/process/inactivate eBrem
+/process/inactivate msc
+/process/inactivate compt
+/process/inactivate phot
+/process/inactivate annihil
+#
+/tracking/stepMax 1 mm
+#
+/gun/particle gamma
+/gun/energy 200 MeV
