@@ -1,0 +1,44 @@
+# $Id: exo3q2.mac,v 1.1 2002-02-14 14:20:45 maire Exp $
+#
+# Macro file for "TestEm3.cc" 
+#
+# Aluminium 1 layer;
+#
+/control/verbose 2
+#
+/run/initialize
+#
+/calor/setNbOfLayers 1
+/calor/setNbOfAbsor 1
+/calor/setAbsor 0 Aluminium 10 cm
+/calor/setSizeYZ 10 cm
+/calor/setField 5 tesla
+/calor/update
+#
+/gun/setDefault
+#
+/control/execute vis.mac
+#
+/process/list
+/process/inactivate eIoni
+/process/inactivate msc
+/process/inactivate conv
+/process/inactivate compt
+/process/inactivate phot
+#
+/tracking/stepMax 1 cm
+#
+/gun/particle e-
+/gun/energy 200 MeV
+#
+/run/particle/setCut 1 m
+/run/initialize
+#/run/beamOn
+#
+#/run/particle/setCut 70 cm
+#/run/initialize
+#/run/beamOn
+#
+#/run/particle/setCut 5 mm
+#/run/initialize
+#/run/beamOn
