@@ -1,0 +1,35 @@
+# $Id: exo4q1.mac,v 1.1 2002-02-14 14:20:45 maire Exp $
+#
+# Macro file for "TestEm3.cc" 
+#
+# water 1 layer; 
+#
+/control/verbose 2
+#
+/run/particle/setCut 2 cm
+/run/initialize
+#
+/calor/setNbOfLayers 1
+/calor/setNbOfAbsor 1
+/calor/setAbsor 0 Water 10 cm
+/calor/setSizeYZ 10 cm
+/calor/update
+#
+/gun/setDefault
+#
+/control/execute vis.mac
+#
+/process/list
+/process/inactivate msc
+/process/inactivate eBrem
+#
+/gun/rndm 0.9
+#
+/gun/particle e-
+/gun/energy 16 MeV
+#/run/beamOn 20
+#
+#/gun/particle proton
+#/gun/energy 105 MeV
+#/run/beamOn 20
+
