@@ -1,0 +1,26 @@
+# $Id: exo5q1.mac,v 1.1 2002-02-14 14:20:45 maire Exp $
+#
+# Macro file for "TestEm3.cc" 
+#
+# Aluminium 1 layer;
+#
+/control/verbose 2
+#
+/run/particle/setCut 5 cm
+/run/initialize
+#
+/calor/setNbOfLayers 1
+/calor/setNbOfAbsor 1
+/calor/setAbsor 0 Aluminium 10 cm
+/calor/setSizeYZ 10 cm
+/calor/update
+#
+/gun/setDefault
+#
+/control/execute vis.mac
+#
+/gun/particle pi+
+/gun/energy 200 MeV
+/gun/position -6. +2.5 0. cm
+#
+#/gun/energy 1 GeV
