@@ -1,0 +1,25 @@
+# $Id: exo5q2.mac,v 1.1 2002-02-14 14:20:45 maire Exp $
+#
+# Macro file for "TestEm3.cc" 
+#
+# Tungsten 1 layer;
+#
+/control/verbose 2
+#
+/run/particle/setCut 5 cm
+/run/initialize
+#
+/calor/setNbOfLayers 1
+/calor/setNbOfAbsor 1
+/calor/setAbsor 0 Tungsten 50 mum
+/calor/setSizeYZ 70 mum
+/calor/update
+#
+/gun/setDefault
+#
+/control/execute vis.mac
+#
+/gun/particle e-
+/gun/energy 600 keV
+#
+/tracking/stepMax 1 mum
