@@ -1,0 +1,33 @@
+# $Id: exo6q1.mac,v 1.1 2002-02-14 14:20:45 maire Exp $
+#
+# Macro file for "TestEm3.cc" 
+#
+# Iron 1 layer;
+#
+/control/verbose 2
+#
+/run/particle/setCut 7 cm
+/run/initialize
+#
+/calor/setNbOfLayers 1
+/calor/setNbOfAbsor 1
+/calor/setAbsor 0 Iron 10 m
+/calor/setSizeYZ 10 m
+/calor/setField 5 tesla
+/calor/update
+#
+/gun/setDefault
+#
+/control/execute vis.mac
+#
+/process/list
+/process/inactivate MuBrems
+/process/inactivate MuIoni
+/process/inactivate eBrem
+/process/inactivate msc
+#
+/gun/particle mu+
+/gun/energy 1 TeV
+/gun/position -6. +2.5 0. m
+#
+
