@@ -1,4 +1,4 @@
-$Id: History,v 1.16 2001-11-28 17:54:45 maire Exp $
+$Id: History,v 1.17 2002-02-14 14:20:44 maire Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -15,6 +15,10 @@ track of all tags.
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
      
+14-02-02  mma (testem3-V04-00-00) 
+- macros for em_exercices 
+- Particle definition : G4Alpha 
+       
 28-11-01  mma (testem3-V03-02-03) 
 - EventAction: DrawTrack "none"
 - small change in vis.mac
